Fixed typo and a broken link

--- a/Type/IO/Socket/Async.pod
+++ b/Type/IO/Socket/Async.pod
@@ -72,7 +72,7 @@ await $socket.print-to('localhost', 3333,"Hello, Perl 6!");
 =head1 Methods
 
 The L<IO::Socket::Async> cannot be constructed directly, either C<connect>
-or C<listen> (for TCP connectsions, ) or C<udp> or C<bind-udp> (for UDP
+or C<listen> (for TCP connections, ) or C<udp> or C<bind-udp> (for UDP
 data,) should be used to create a client or a server respectively.
 
 =head2 method connect
@@ -167,7 +167,7 @@ case you can provide your own C<Buf> with the C<:buf> named parameter.
 
 	method close()
 
-Close the connected client <IO::Socket::Async> which will have been
+Close the connected client L<IO::Socket::Async> which will have been
 obtained from the C<listen> L<Supply> or the C<connect>
 L<Promise>.
 
