Add Test::When to the list

--- a/Language/modules-extra.pod
+++ b/Language/modules-extra.pod
@@ -27,7 +27,7 @@ Some tests of module quality.
 =item L<Test::META|http://modules.perl6.org/dist/Test::META>      Test your META6.json file
 =item L<Test::Output|http://modules.perl6.org/dist/Test::Output>  Test the output to STDOUT and STDERR your program generates
 =item L<Test::Screen|http://modules.perl6.org/dist/Proc::Screen>  Use B<GNU screen> to test fullscreen VT applications
-
+=item L<Test::When|http://modules.perl6.org/dist/Test::When>  Control when your tests are run (author testing, online testing, etc.)
 
 =head1 NativeCall
 
