Added docs to method print-nl in class IO::Handle

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -29,7 +29,7 @@ and the stream may be buffered.
 
 =head2 method eof
 
-Returns L<Bool::True> if the read operations have exhausted the content of the file.
+Returns C<True> if the read operations have exhausted the content of the file.
 
 =head2 method lines
 
@@ -80,6 +80,19 @@ to write bytes.
 
     my $fh = open 'path/to/file', :w;
     $fh.print("some text\n");
+    $fh.close;
+
+=head2 method print-nl
+
+    method print-nl(IO::Handle:D: --> True)
+
+Writes a newline to the filehandle. The newline marker defaults
+to C<\n> unless another marker has been specified in the call to
+L<open>.
+
+    my $fh = open 'path/to/file', :w, nl-out => "\r\n";  
+    $fh.print("some text");
+    $fh.print-nl;                                        # \r\n
     $fh.close;
 
 =head2 method read
@@ -182,13 +195,13 @@ argument such as C<fcntl> or C<ioctl>.
 
     method opened(IO::Handle:D: --> Bool)
 
-Returns L<Bool::True> if the handle is open.
+Returns C<True> if the handle is open.
 
 =head2 method t
 
     method t(IO::Handle:D: --> Bool)
 
-Returns L<Bool::True> if the handle is opened to a tty.
+Returns C<True> if the handle is opened to a tty.
 
 =head1 Related roles and classes
 
