--- a/Type/Rat.pod
+++ b/Type/Rat.pod
@@ -35,4 +35,20 @@ C<FatRat> type instead.
 
 C<Rat> objects are immutable.
 
+=head1 methods
+
+=head2 method perl
+
+    multi method perl(Rat:D:) returns Str:D
+
+Returns a string representation corresponding to the unambiguous
+C<val()>-based representation of rational literals.  If the
+number can be represented exactly in decimal, it will be. Otherwise uses
+the form "C<< <3/5> >>", without internal spaces, and including the
+angles that keep the C</> from being treated as a normal division
+operator.
+
+    say (1/3).perl;                # <1/3> 
+    say (2/4).perl;                # 0.5
+
 =end pod
