Fixed broken link and error in code example. ZoffixW++

--- a/Type/Regex.pod
+++ b/Type/Regex.pod
@@ -20,7 +20,7 @@ A regex is typically constructed by a regex literal
 To match a string against a regex, you can use the smart match operator:
 
     my $match = 'abc' ~~ rx/ ^ab /;
-    say $match.True;                # True
+    say $match.Bool;                # True
     say $match.orig;                # abc
     say $match.Str;                 # ab
     say $match.from;                # 0
@@ -58,7 +58,7 @@ failure.
 
     multi method Bool(Regex:D:) returns Bool:D
 
-Matches against the caller's L<$_> variable, and returns True for a match or
-False for no match.
+Matches against the caller's L<$_|/syntax/$_> variable, and returns C<True> for a match or
+C<False> for no match.
 
 =end pod
