put C<.""> in a findable spot Xliff++ for asking the right question the wrong way

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -252,6 +252,13 @@ Unlike Subroutines, additional named arguments will not produce compile time or
 runtime errors. That allows chaining of methods via
 L<Re-dispatching|/language/functions#Re-dispatching>
 
+Method names can be resolved at runtime with the C<.""> operator.
+
+    class A { has $.b };
+    my $name = 'b';
+    A.new."$name"().say;
+    # OUTPUT«(Any)␤»
+
 =head2 self
 
 Inside a method, the term C<self> is available, which is bound to the
