fix broken link

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -366,7 +366,7 @@ L<Submethod|/type/Submethod>.
 
 They carry additional functionality in addition to what L<Block|/type/Block>
 supplies: they can come as L<multis|#Multi-dispatch>,
-you can L<wrap|/type/Routine#method wrap> them, and exit early with C<return>:
+you can L<wrap|/type/Routine#method_wrap> them, and exit early with C<return>:
 
 =begin code :allow<B>
 my $keywords = set <if for unless while>;
