--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -386,6 +386,32 @@ Here C<return> does not just leave the block inside which it was called, but
 the whole routine. In general, blocks are transparent to C<return>, they
 attach to the outer routine.
 
+Routines can be inlined and as such provide an obstacle for wrapping. Use the
+pragma C<use soft;> to prevent inlining to allow wrapping at runtime.
+
+    sub testee(Int $i, Str $s){
+        rand.Rat * $i ~ $s;
+    }
+    
+    sub wrap-to-debug(&c){
+        say "wrapping {&c.name} with aguments {&c.signature.perl}";
+        &c.wrap: sub (|args){
+            note "calling {&c.name} with {args.gist}";
+            my \ret-val := callwith(|args);
+            note "returned from {&c.name} with return value {ret-val.perl}";
+            ret-val
+        }
+    }
+    
+    my $testee-handler = wrap-to-debug(&testee);
+    # OUTPUT«wrapping testee with aguments :(Int $i, Str $s)»
+    
+    say testee(10, "ten");
+    # OUTPUT«calling testee with \(10, "ten")␤returned from testee with return value "6.151190ten"␤6.151190ten»
+    &testee.unwrap($testee-handler);
+    say testee(10, "ten");
+    # OUTPUT«6.151190ten␤»
+
 
 =comment Important ones: candidates, wrap, unwrap, assuming, arity, count
 
