--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -158,7 +158,7 @@ Example:
 
 =head2 What is C<(Any)>?
 
-L<Any|type/Any> is a top level class used as a default superclass for new
+L<Any|/type/Any> is a top level class used as a default superclass for new
 classes. It is often seen in a context where a variable has been defined but
 not assigned where it loosely resembles the undef or null values in other
 languages.
