--- a/Language/setbagmix.pod
+++ b/Language/setbagmix.pod
@@ -51,7 +51,7 @@ The six collection classes C<Set>, C<SetHash>, C<Bag>, C<BagHash>, C<Mix>,
 C<MixHash>, all share similar semantics.
 
 For one thing, as far as they are concerned, identical objects refer to the
-same element -- where identity is determined using the L<WHICH> methods
+same element -- where identity is determined using the L<WHICH|/routine/WHICH> methods
 (i.e. the same way that the L<===> operator checks identity). For value
 types like C<Str>, this means having the same value; for reference types
 like C<Array>, it means referring to the same object instance.
@@ -79,7 +79,7 @@ one C<Set> is a subset of another C<Set>.
 
 These infixes can be written using the UTF-8 character that represents the
 function (like L<C<∈>|∈>, or L<C<∪>|∪>), or they can be written with an
-equivalent ASCII version (like L<C<(elem)>|(elem)> or L<C<(|)>|(|)>).
+equivalent ASCII version (like L<C<(elem)>|/routine/(elem)> or L<C<(|)>|(|)>).
 
 Most of the time, explicitly using C<Set> objects with these infixes is
 unnecessary. All of the infix operators will work on any objects of type
