--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -18,7 +18,7 @@ a L<Capture>, to the signature.
 Signatures appear in parenthesis after subroutine and method names, on
 blocks after a C<< -> >> or C<< <-> >> arrow, as the input to
 L<variable declarators|/language/variables#Variable_Declarators_and_Scope>
-like L<C<my>>, or as a separate term starting with a colon.
+like L<C<my>|/syntax/my>, or as a separate term starting with a colon.
 
 =begin code :allow<B L>
 sub fB<($x)> { }
