Fixed broken link

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -907,7 +907,7 @@ attempt to construct the appropriate L<allomorph|/language/glossary#Allomorph>,
 returning one of L<IntStr|/type/IntStr>, L<NumStr|/type/NumStr>, L<RatStr|/type/RatStr>
 or L<ComplexStr|/type/ComplexStr> or a plain C<Str> if a numeric value cannot
 be parsed.  If the C<:val-or-fail> adverb is provided it will return an
-L<X::Str::Numeric|/type/X/Str/Numeric> rather than the original string if it 
+L<X::Str::Numeric|/type/X::Str::Numeric> rather than the original string if it
 cannot parse the string as a number.
 
     say val("42").WHAT; # (IntStr)
