Another five broken links fixed

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1530,7 +1530,7 @@ A comparison:
     say $_ if /A/ ff /C/ for @list;  # prints A, B, and C
     say $_ if /A/ ^ff /C/ for @list; # prints B and C
 
-The sed-like version can be found in L<C<^fff>>.
+The sed-like version can be found in L<C<^fff>|/routine/^fff>.
 
 This operator cannot be overloaded, as it is handled specially by the compiler.
 
@@ -1560,7 +1560,7 @@ the stop or start condition (or both).
     say $_ if /A/ ff /C/ for @list;  # prints A, B, and C
     say $_ if /A/ ^ff^ /C/ for @list; # prints B
 
-The sed-like version can be found in L<C<^fff^>>.
+The sed-like version can be found in L<C<^fff^>|/routine/^fff^>.
 
 This operator cannot be overloaded, as it is handled specially by the compiler.
 
@@ -1596,7 +1596,7 @@ Like L<C<fff>>, except it does not return true for matches to the left argument.
     say $_ if /A/ fff /C/ for @list;  # prints A, B, and C
     say $_ if /A/ ^fff /C/ for @list; # prints B and C
 
-For the non-sed version, see L<C<^ff>>.
+For the non-sed version, see L<C<^ff>|/routine/^ff>.
 
 This operator cannot be overloaded, as it is handled specially by the compiler.
 
@@ -1625,7 +1625,7 @@ right argument.
     say $_ if /A/ fff /C/ for @list;  # prints A, B, and C
     say $_ if /A/ ^fff^ /C/ for @list; # prints B
 
-For the non-sed version, see L<C<^ff^>>.
+For the non-sed version, see L<C<^ff^>|/routine/^ff^>.
 
 This operator cannot be overloaded, as it is handled specially by the compiler.
 
