--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -208,7 +208,7 @@ implement a rudimentary, yet type-safe, logging mechanism. We utilize a named L<
 variable for keeping track of the previous C<Instant> so that we can provide an interval.
 
 The whole point of object hashes is to keep keys as objects-in-themselves.
-Currently object hashes utilize the L<WHICH> method of an object, which returns a
+Currently object hashes utilize the L<WHICH|/routine/WHICH> method of an object, which returns a
 unique identifier for every mutable object. This is the keystone upon which the object
 identity operator (L<===>) rests. Order and containers really matter here as the order of
 C<.keys> is undefined and one anonymous list is never L<===> to another.
