Another batch of broken links fixed

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -100,7 +100,7 @@ larger expression determines the type of assignment:
 This is because the whole expression is C<@array = $num = 42, "str">, while
 C<$num = 42> is not is own separate expression.
 
-See L<operators|Language/operators> for more details on precedence.
+See L<operators|/language/operators> for more details on precedence.
 
 =head2 Sigilless variables
 
@@ -109,7 +109,7 @@ It is possible to create "variables" in Perl 6 that do not have sigils:
     my \degrees = pi / 180;
     my \θ       = 15 * degrees;
 
-Note, however, that these do not create L<containers>. That means C<degrees>
+Note, however, that these do not create L<containers|/language/containers>. That means C<degrees>
 and C<θ> above actually directly represent C<Num>s. To illustrate, try
 assigning to one after you've defined it:
 
@@ -946,7 +946,7 @@ This outputs:
 
 =head3 The C<$/> Variable
 
-C<$/> is the match variable. It stores the result of the last L<Regex|regex>
+C<$/> is the match variable. It stores the result of the last L<Regex|/language/regexes>
 match and so usually contains objects of type L<Match>.
 
     'abc 12' ~~ /\w+/;  # sets $/ to a Match object
@@ -975,7 +975,7 @@ the output is:
 
 =head4 X«Positional Attributes|variable,$0;variable,$1;variable,@()»
 
-C<$/> can have positional attributes if the L<Regex|regex> had
+C<$/> can have positional attributes if the L<Regex|/language/regexes> had
 capture-groups in it, which are just formed with parentheses.
 
     'abbbbbcdddddeffg' ~~ / a (b+) c (d+ef+) g /;
@@ -994,7 +994,7 @@ C<@()> can be used.
 
 =head4 X«Named Attributes|variable,$<named>;variable,%()»
 
-C<$/> can have named attributes if the L<Regex|regex> had named
+C<$/> can have named attributes if the L<Regex|/language/regexes> had named
 capture-groups in it, or if the Regex called out to another Regex.
 
     'I.... see?' ~~ / \w+ $<punctuation>=[ <-[\w\s]>+ ] \s* $<final-word> = [ \w+ . ] /;
