Fixed broken link

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -353,8 +353,7 @@ there doesn't seem to be a really clear explanation of how they work.
 L<https://design.perl6.org/S04.html#The_for_statement> may be of some
 help here, as well as the design document at
 L<https://design.perl6.org/S06.html#%22Pointy_blocks%22>. There is also
-some information at L<https://en.wikibooks.org/wiki/Perl_6_Programming/-
-Blocks_and_Closures#Pointy_Blocks>
+some information at L<https://en.wikibooks.org/wiki/Perl_6_Programming/Blocks_and_Closures#Pointy_Blocks>
 
 =head2 eof
 
