--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -85,7 +85,7 @@ and extended time formats.
 An invalid input string throws an exception of type
 L<X::Temporal::InvalidFormat>. If you supply a string that includes a time
 zone and supply the C<timezone> named argument, an exception of type
-L<X::DateTime:TimezoneClash> is thrown.
+L<X::DateTime::TimezoneClash> is thrown.
 
 =head2 method now
 
