Added docs for Dateish.daycount

--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -226,4 +226,23 @@ Usage:
 
 Returns the date in C<YYYY-MM-DD> format (L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>)
 
+=head2 method daycount
+
+Defined as:
+
+    method daycount(Dateish:D:) returns Int:D
+
+Usage:
+
+    Dateish.daycount
+
+Returns the number of days from the epoch Nov. 17, 1858 to the
+day of the invocant. The daycount returned by this method is the
+MJD, i.e. the L<Modified Julian Day|https://en.wikipedia.org/wiki/Julian_day>,
+which is used routinely by e.g. astronomers, geodesists, scientists
+and others. The MJD convention is designed to facilitate simplified
+chronological calculations.
+
+    say Date.new('1995-09-27').daycount;    # 49987
+
 =end pod
