Fixed broken code example. gfldex++ for the code

--- a/Type/Tap.pod
+++ b/Type/Tap.pod
@@ -8,8 +8,8 @@
 
 A Tap is a subscription to a L<Supply|/type/Supply>.
 
-    my $s   = Supply.new;
-    my $tap = $s.tap(
+    my $s = Supplier.new;
+    my $tap = $s.Supply.tap(
         -> $v { say "the value is $v" },
         done    => { say "Supply is done" },
         closing => { say "Tap closed" },
@@ -18,8 +18,6 @@ A Tap is a subscription to a L<Supply|/type/Supply>.
 
     # later
     $tap.close;
-    # or
-    $s.close($tap);
 
 =head1 Methods
 
