--- a/Language/control.pod
+++ b/Language/control.pod
@@ -479,6 +479,8 @@ be in the same "switch" just so long as you do not open a new block:
     }
     #-> 42
 
+C<when> statments can smart match against L<Signatures|/language/syntax#Signature_literals>.
+
 =head2 X<proceed and succeed|control flow,proceed succeed>
 
 Both C<proceed> and C<succeed> are meant to be used only from inside C<when>
