doc statement form of given

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -558,6 +558,20 @@ if there is one:
         }
         "This also says".say;
     }
+=head2 X<given as a statement|control flow,given statement>
+
+C<given> can follow a statement to set the topic in the statement it follows.
+
+    .say given "foo";
+    # OUTPUT«foo␤»
+
+    printf "%s %02i.%02i.%i",
+            <Mo Tu We Th Fr Sa Su>[.day-of-week],
+            .day,
+            .month,
+            .year
+        given DateTime.now;
+    # OUTPUT«Sa 03.06.2016»
 
 =head1 X<loop|control flow>
 
