Fixed a couple of errors in the examples. RabidGravy++

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -199,7 +199,6 @@ Creates an on-demand supply from the values passed to this method.
 
     my $s = Supply.from-list(1, 2, 3);
     $s.tap(&say);           # 1\n2\n3\n
-    $s.done;
 
 =head2 method share
 
@@ -259,7 +258,7 @@ that smart-match against C<$test>.
 Returns a new supply that maps each value of the given supply through
 C<&mapper> and emits it to the new supply.
 
-    my $supplier = Supplier.new
+    my $supplier = Supplier.new;
     my $all      = $supplier.Supply;
     my $double   = $all.map(-> $value { $value * 2 });
     $double.tap(&say);
