--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -52,7 +52,7 @@ A more idiomatic way to do this is to use the smartmatch operator L<~~|/routine/
 
     method does(Mu $type)      returns Bool:D
 
-Returns True if and only if the invocant conforms to type C<$type>.
+Returns C<True> if and only if the invocant conforms to type C<$type>.
 
     my $d = Date.new('2016-06-03');
     say $d.does(Dateish);             # True    (Date does role Dateish)
