Fixed another broken example. timotimo++

--- a/Type/Version.pod
+++ b/Type/Version.pod
@@ -14,7 +14,7 @@ them with a dot. A version part is usually an integer, a string like C<alpha>,
 or a L<Whatever>-star C<*>. The latter is used to indicate that any version
 part is acceptable in another version that is compared to the current one.
 
-    say v1.0.1 ~~ v.1.*;    # True
+    say v1.0.1 ~~ v1.*;     # True
 
 Version literals can only contain numeric and L<Whatever> parts. They start
 with a lower-case C<v>, and are followed by at least one part. Multiple parts
