Fixed typo in code example

--- a/Type/Submethod.pod
+++ b/Type/Submethod.pod
@@ -18,7 +18,7 @@ declarator:
 
     class Area {
         has $.size;
-        submethod BUILD(:$x, :$y, $z) {
+        submethod BUILD(:$x, :$y, :$z) {
             $!size = $x * $y * $z;
         }
     }
