Removed reference to type Cat since it's NYI

--- a/Type/Stringy.pod
+++ b/Type/Stringy.pod
@@ -6,7 +6,6 @@
 
     role Stringy { ... }
 
-Common role for string types (such as Str) and types that can act as
-strings (such as Cat).
+Common role for string types (such as Str).
 
 =end pod
