Tidied up some code examples a bit

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -55,7 +55,7 @@ Returns a lower-case version of the string.
 Examples:
 
     lc("A"); # returns "a"
-    "A".lc   # returns "a"
+    "A".lc;  # returns "a"
 
 =head2 routine uc
 
@@ -168,7 +168,7 @@ Examples:
     say index "Camelia is a butterfly", "a", 2;  # 6
     say index "Camelia is a butterfly", "er";    # 17
     say index "Camelia is a butterfly", "Camel"; # 0
-    say index "Camelia is a butterfly", "Onion"; # Int()
+    say index "Camelia is a butterfly", "Onion"; # Nil
 
     say index("Camelia is a butterfly", "Onion").defined ?? 'OK' !! 'NOT'; # NOT
 
@@ -255,22 +255,22 @@ Examples:
 
 =begin code
 
-    say split(";", "a;b;c").perl            # ("a", "b", "c")
-    say split(";", "a;b;c", :v).perl        # ("a", ";", "b", ";", "c")
-    say split(";", "a;b;c", 2).perl         # ("a", "b;c").Seq
-    say split(";", "a;b;c", 2, :v).perl     # ("a", ";", "b;c")
-    say split(";", "a;b;c,d").perl          # ("a", "b", "c,d")
-    say split(/\;/, "a;b;c,d").perl         # ("a", "b", "c,d")
-    say split(<; ,>, "a;b;c,d").perl        # ("a", "b", "c", "d")
-    say split(/<[;,]>/, "a;b;c,d").perl     # ("a", "b", "c", "d")
-    say split(<; ,>, "a;b;c,d", :k).perl    # ("a", 0, "b", 0, "c", 1, "d")
-    say split(<; ,>, "a;b;c,d", :kv).perl   # ("a", 0, ";", "b", 0, ";", "c", 1, ",", "d")
+    say split(";", "a;b;c").perl;            # ("a", "b", "c")
+    say split(";", "a;b;c", :v).perl;        # ("a", ";", "b", ";", "c")
+    say split(";", "a;b;c", 2).perl;         # ("a", "b;c").Seq
+    say split(";", "a;b;c", 2, :v).perl;     # ("a", ";", "b;c")
+    say split(";", "a;b;c,d").perl;          # ("a", "b", "c,d")
+    say split(/\;/, "a;b;c,d").perl;         # ("a", "b", "c,d")
+    say split(<; ,>, "a;b;c,d").perl;        # ("a", "b", "c", "d")
+    say split(/<[;,]>/, "a;b;c,d").perl;     # ("a", "b", "c", "d")
+    say split(<; ,>, "a;b;c,d", :k).perl;    # ("a", 0, "b", 0, "c", 1, "d")
+    say split(<; ,>, "a;b;c,d", :kv).perl;   # ("a", 0, ";", "b", 0, ";", "c", 1, ",", "d")
 
-    say "".split("x").perl                  # ("",)
-    say "".split("x", :skip-empty).perl     # ("",)
+    say "".split("x").perl;                  # ("",)
+    say "".split("x", :skip-empty).perl;     # ("",)
 
-    say "abcde".split("").perl              # ("", "a", "b", "c", "d", "e", "")
-    say "abcde".split("",:skip-empty).perl  # ("a", "b", "c", "d", "e")
+    say "abcde".split("").perl;              # ("", "a", "b", "c", "d", "e", "")
+    say "abcde".split("",:skip-empty).perl;  # ("a", "b", "c", "d", "e")
 
 =end code
 
@@ -294,10 +294,10 @@ If no matcher is supplied, a list of characters in the string
 
 Examples:
 
-    comb(/\w/, "a;b;c").perl;        # ("a", "b", "c").list
-    comb(/\N/, "a;b;c").perl;        # ("a", ";", "b", ";", "c").list
-    comb(/\w/, "a;b;c", 2).perl;     # ("a", "b").list
-    comb(/\w\;\w/, "a;b;c", 2).perl; # ("a;b",).list
+    say comb(/\w/, "a;b;c").perl;        # ("a", "b", "c").Seq
+    say comb(/\N/, "a;b;c").perl;        # ("a", ";", "b", ";", "c").Seq
+    say comb(/\w/, "a;b;c", 2).perl;     # ("a", "b").Seq
+    say comb(/\w\;\w/, "a;b;c", 2).perl; # ("a;b",).Seq
 
 If the matcher is an integer value, it is considered to be a matcher that
 is similar to / . ** matcher /, but which is about 30x faster.
@@ -312,10 +312,10 @@ same as a call to C<$input.comb( / ^^ \N* /, $limit )> would.
 
 Examples:
 
-    lines("a\nb").perl;    # ("a", "b").list
-    lines("a\nb").elems;   # 2
-    "a\nb".lines.elems;    # 2
-    "a\n".lines.elems;     # 1
+    say lines("a\nb").perl;    # ("a", "b").Seq
+    say lines("a\nb").elems;   # 2
+    say "a\nb".lines.elems;    # 2
+    say "a\n".lines.elems;     # 1
 
 =head2 routine words
 
@@ -327,10 +327,10 @@ C<$input.comb( / \S+ /, $limit )> would.
 
 Examples:
 
-    "a\nb\n".words.perl;       # ("a", "b").list
-    "hello world".words.perl;  # ("hello", "world").list
-    "foo:bar".words.perl;      # ("foo:bar",).list
-    "foo:bar\tbaz".words.perl; # ("foo:bar", "baz").list
+    say "a\nb\n".words.perl;       # ("a", "b").Seq
+    say "hello world".words.perl;  # ("hello", "world").Seq
+    say "foo:bar".words.perl;      # ("foo:bar",).Seq
+    say "foo:bar\tbaz".words.perl; # ("foo:bar", "baz").Seq
 
 =head2 routine flip
 
@@ -530,7 +530,7 @@ Special case:  sprintf("<b>%s</b>\n", "Perl 6")  will not work use either of the
 
     multi method starts-with(Str:D: Str(Cool) $needle) returns True:D
 
-Returns True if the invocant is identical to or starts with C<$needle>.
+Returns C<True> if the invocant is identical to or starts with C<$needle>.
 
     say "Hello, World".starts-with("Hello");    # True
     say "http://perl6.org/".starts-with('ftp'); # False
@@ -539,7 +539,7 @@ Returns True if the invocant is identical to or starts with C<$needle>.
 
     multi method ends-with(Str:D: Str(Cool) $needle) returns True:D
 
-Returns True if the invocant is identical to or ends with C<$needle>.
+Returns C<True> if the invocant is identical to or ends with C<$needle>.
 
     say "Hello, World".ends-with('Hello');      # False
     say "Hello, World".ends-with('ld');         # True
@@ -548,7 +548,7 @@ Returns True if the invocant is identical to or ends with C<$needle>.
 
     multi method contains(Str:D: Str(Cool) $needle) returns True:D
 
-Returns True if the invocant contains the C<$needle> at any position within
+Returns C<True> if the invocant contains the C<$needle> at any position within
 the string.
 
     say "Hello, World".contains('hello');      # False
