Fixed typo in code example

--- a/Type/Rational.pod
+++ b/Type/Rational.pod
@@ -54,7 +54,7 @@ base C<$base>. The second element is the one that repeats. For example:
 
     my ($non-rep, $repeating) = (19/3).base-repeating(10);
     say $non-rep;                               # 6.
-    say $rep;                                   # 3
+    say $repeating;                             # 3
     printf '%s(%s)', $non-rep, $repeating;      # 6.(3)
 
 19/3 is 6.333333... with the 3 repeating indefinitely.
