Fixed a broken code snippet

--- a/Type/Parameter.pod
+++ b/Type/Parameter.pod
@@ -124,8 +124,8 @@ Returns C<True> for parameters that capture the rest of the argument list into
 a single L<Capture|/type/Capture> object.
 
     sub how_many_extra_positionals($!, |capture) { capture.elems.say }
-    how_many_extra_positionals(0,1,2,3)                        #-> 3
-    say &how_many_positionals.signature.params[1].capture;     #-> True
+    how_many_extra_positionals(0,1,2,3);                           #-> 3
+    say &how_many_extra_positionals.signature.params[1].capture;   #-> True
 
 Like raw parameters, Capture parameters do not force any context on the
 values bound to them, which is why their sigils are only used in
