Added docs for Date.new-from-daycount

--- a/Type/Date.pod
+++ b/Type/Date.pod
@@ -54,6 +54,23 @@ that can be coerced to integers, or from a string of the form C<YYYY-MM-DD>
 (L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>), or from an Instant
 or DateTime object.  Optionally accepts a formatter as a named parameter.
 
+=head2 method new-from-daycount
+
+Defined as:
+
+    method new-from-daycount($daycount,:&formatter) returns Date:D
+
+Usage:
+
+    $date = Date.new-from-daycount(DAYCOUNT, FORMATTER?)
+
+Creates a new C<Date> object given C<$daycount> which is the number
+of days from epoch Nov. 17, 1858, i.e. the
+L<Modified Julian Day|https://en.wikipedia.org/wiki/Julian_day>.
+Optionally accepts a formatter as a named parameter.
+
+    say Date.new-from-daycount(49987);          # 1995-09-27
+
 =head2 method today
 
 Defined as:
