Fixed small error in code example

--- a/Type/Nil.pod
+++ b/Type/Nil.pod
@@ -75,7 +75,7 @@ assigning C<Nil> to a variable which has a default will restore that default.
 
     my Int $x is default(42) = -1;
     my $y = 1;
-    for $x,$y -> $val is rw { $val = $reset unless $val > 0 }
+    for $x,$y -> $val is rw { $val = Nil unless $val > 0 }
     $x.say;          #-> 42
 
 =head1 Methods
