Added docs for Baggy.kxxv

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -51,6 +51,22 @@ L<Mixy>.
 
 =comment TODO
 
+=head2 method kxxv
+
+Defined as:
+
+    method kxxv(Baggy:D:) returns List:D
+
+Returns a list of the keys of the invocant, with each key multiplied by its
+weight. Note that C<kxxv> only works for C<Baggy> types which have integer
+weights, i.e. L<Bag> and L<BagHash>.
+
+    my $breakfast = bag <spam eggs spam spam bacon>;
+    say $breakfast.kxxv.sort;                         # (bacon eggs spam spam spam)
+
+    my $n = ("a" => 0, "b" => 1, "b" => 2).BagHash;
+    say $n.kxxv;                                      # (b b b)
+
 =head2 method elems
 
 =comment TODO
