Add documentation for the new IO.mode method
This requires Rakudo PR #773, which implements RT #125489

--- a/Type/IO/Special.pod
+++ b/Type/IO/Special.pod
@@ -111,4 +111,10 @@ The last accessed time always returns an undefined L<Instant>
 
 The last changed time always returns an undefined L<Instant>
 
+=head2 method mode
+
+    method mode(IO::Special:D:) returns Nil
+
+The mode always returns L<Nil>
+
 =end pod
