--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -510,6 +510,13 @@ or more readably:
     my $change_time = DateTime.new($chnge_instant);
     say $change_time;         # e.g. 2015-02-16T12:18:50Z
 
+=head2 method mode
+
+Return an L<IntStr> object representing the POSIX permissions of a file.
+
+    say ~"path/to/file".IO.mode;        #  e.g. '0644'
+    say +"path/to/file".IO.mode;        #  e.g. 420, where sprintf('%04o', 420) eq '0644'
+
 =head1 Related roles and classes
 
 See also the related role L<IO> and the related class L<IO::Handle>.
