--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -394,7 +394,7 @@ pragma C<use soft;> to prevent inlining to allow wrapping at runtime.
     }
     
     sub wrap-to-debug(&c){
-        say "wrapping {&c.name} with aguments {&c.signature.perl}";
+        say "wrapping {&c.name} with arguments {&c.signature.perl}";
         &c.wrap: sub (|args){
             note "calling {&c.name} with {args.gist}";
             my \ret-val := callwith(|args);
@@ -404,7 +404,7 @@ pragma C<use soft;> to prevent inlining to allow wrapping at runtime.
     }
     
     my $testee-handler = wrap-to-debug(&testee);
-    # OUTPUT«wrapping testee with aguments :(Int $i, Str $s)»
+    # OUTPUT«wrapping testee with arguments :(Int $i, Str $s)»
     
     say testee(10, "ten");
     # OUTPUT«calling testee with \(10, "ten")␤returned from testee with return value "6.151190ten"␤6.151190ten»
