--- a/Type/NFKD.pod
+++ b/Type/NFKD.pod
@@ -2,7 +2,7 @@
 
 =TITLE class NFD
 
-=SUBTITLE Codepoint-String in Normal Form KD (Compatiblity Decomposed)
+=SUBTITLE Codepoint-String in Normal Form KD (Compatibility Decomposed)
 
     class NFC is Uni { ... }
 
