--- a/Type/Uni.pod
+++ b/Type/Uni.pod
@@ -40,7 +40,7 @@ Returns a NFD (Normal Form Decomposed)-converted version of the invocant.
 
     method NFKC(Uni:D:) returns NFKC:D
 
-Returns a NFKC (Normal Form Compatiblity Composed)-converted version of the invocant.
+Returns a NFKC (Normal Form Compatibility Composed)-converted version of the invocant.
 
 =head2 method NFKD
 
