--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -366,7 +366,7 @@ Usage:
     NUMERIC.cosec
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, interprets it as radians,
-returns its L<cosecans|https://en.wikipedia.org/wiki/Trigonometric_functions#Reciprocal_functions>,
+returns its L<cosecant|https://en.wikipedia.org/wiki/Trigonometric_functions#Reciprocal_functions>,
 that is, the reciprocal of its sine.
 
 =head2 routine acosec
@@ -382,7 +382,7 @@ Usage:
     NUMERIC.acosec
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
-L<arc-cosecans|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
+L<arc-cosecant|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
 radians.
 
 =head2 routine cotan
