--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -398,7 +398,7 @@ Usage:
     NUMERIC.cotan
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, interprets it as radians,
-returns its L<cotangens|https://en.wikipedia.org/wiki/Trigonometric_functions#Reciprocal_functions>,
+returns its L<cotangent|https://en.wikipedia.org/wiki/Trigonometric_functions#Reciprocal_functions>,
 that is, the reciprocal of its tangens.
 
 =head2 routine acotan
@@ -414,7 +414,7 @@ Usage:
     NUMERIC.acotan
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
-L<arc-cotangens|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
+L<arc-cotangent|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
 radians.
 
 =head2 routine sinh
