--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -243,7 +243,7 @@ heirarchy. Some examples:
     $Foo::($bar)::baz   # compound identifiers that perform interpolations
     Foo::Bar::bob(23)   # function invocation given qualified name
 
-See the L<documentaton on packages|/language/packages> for more details.
+See the L<documentation on packages|/language/packages> for more details.
 
 
 =head2 Literals
