--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -94,7 +94,7 @@ accept an optional C<$description> of the test.
     nok $query.error,      'Query completed without error';
 
 In principle you could use C<ok> for every kind of comparison test, by
-including the comparison in the exression passed to C<$value>:
+including the comparison in the expression passed to C<$value>:
 
     ok factorial(6) == 720, 'Factorial - small integer';
 
