--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -236,7 +236,7 @@ variables:
 
 Named entities, such as variables, constants, classes, modules, subs, etc, are
 part of a namespace. Nested parts of a name use C<::> to separate the
-heirarchy. Some examples:
+hierarchy. Some examples:
 
     $foo                # simple identifiers
     $Foo::Bar::baz      # compound identifiers separated by ::
