--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -99,7 +99,7 @@ including the comparison in the expression passed to C<$value>:
     ok factorial(6) == 720, 'Factorial - small integer';
 
 However, where possible it is better to use one of the specialized comparison
-test functions below, because they can print more helpful diagnostics ouput in
+test functions below, because they can print more helpful diagnostics output in
 case the comparison fails.
 
 =head2 By string comparison
