--- a/Language/list.pod
+++ b/Language/list.pod
@@ -418,7 +418,7 @@ using C<flat>.
 
     (0,[(1,2),$(3,4)],5).flat.perl.say; # (0, $(1, 2), $(3, 4), 5).Seq
 
-...the elements themselves, however, stay in one peice.
+...the elements themselves, however, stay in one piece.
 
 This can irk users of data you provide if you have deeply nested Arrays
 where they want flat data.  Currently they have to deeply map the structure
