--- a/Language/list.pod
+++ b/Language/list.pod
@@ -433,7 +433,7 @@ users:
 
 =item use Slips when you want to always merge with surrounding lists
 =item use non-itemized lists when you want to make it easy for the user to flatten
-=item use itemized lists to protect things the user probaby will not want flattened
+=item use itemized lists to protect things the user probably will not want flattened
 =item use Arrays as non-itemized lists of itemized lists, if appropriate,
 =item use Arrays if the user is going to want to mutate the result without copying it first.
 
