--- a/Language/quoting.pod
+++ b/Language/quoting.pod
@@ -233,7 +233,7 @@ Again, the output of the external command can be kept in a variable:
 See also L<shell|/routine/shell> and L<run|/routine/run> for other ways to
 execute external commands.
 
-=head2 X<Heredocs: :to|qoute,heredocs :to>
+=head2 X<Heredocs: :to|quote,heredocs :to>
 
 A convenient way to write multi-line string literals are I<heredocs>, which
 let you choose the delimiter yourself:
