--- a/Type/Nil.pod
+++ b/Type/Nil.pod
@@ -17,7 +17,7 @@ The class C<Nil> is the same exact thing as its only possible value, C<Nil>.
 
 Along with C<Failure>, C<Nil> is one of the two types which may
 always be returned from a routine even when the routine specifies a
-particular return type.  It may also be returned regardess of the
+particular return type.  It may also be returned regardless of the
 definedness of the return type, however, C<Nil> is considered undefined
 for all other purposes.
 
