--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -334,7 +334,7 @@ Usage:
     NUMERIC.sec
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, interprets it as radians,
-returns its L<secans|https://en.wikipedia.org/wiki/Trigonometric_functions#Reciprocal_functions>,
+returns its L<secant|https://en.wikipedia.org/wiki/Trigonometric_functions#Reciprocal_functions>,
 that is, the reciprocal of its cosine.
 
 =head2 routine asec
@@ -350,7 +350,7 @@ Usage:
     NUMERIC.asec
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
-L<arc-secans|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
+L<arc-secant|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
 radians.
 
 =head2 routine cosec
