--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -304,7 +304,7 @@ entire arrays / hashes into strings:
 
 =head1 Multiple dimensions
 
-Dimensions in subscripts are separated by a semiconon, allowing to mix lists of
+Dimensions in subscripts are separated by a semicolon, allowing to mix lists of
 elements and dimensions.
 
     my @twodim = (<a b c>, (1,2,3));
