--- a/Language/control.pod
+++ b/Language/control.pod
@@ -479,7 +479,7 @@ be in the same "switch" just so long as you do not open a new block:
     }
     #-> 42
 
-C<when> statments can smart match against L<Signatures|/language/syntax#Signature_literals>.
+C<when> statements can smart match against L<Signatures|/language/syntax#Signature_literals>.
 
 =head2 X<proceed and succeed|control flow,proceed succeed>
 
