--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -307,7 +307,7 @@ sub frodo(Bool :$destroys-ring) {
     die "Oops, that wasn't supposed to happen" unless $destroys-ring;
 }
 
-lives-ok { frodo(destroys-ring => True) }, "Frodo survivies";
+lives-ok { frodo(destroys-ring => True) }, "Frodo survives";
 =end code
 
 =item X<eval-dies-ok($string, $description?)|eval-dies-ok>
