--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -286,7 +286,7 @@ Usage:
     NUMERIC.tan
 
 Coerces the invocant (or in sub form, the argument) to L<Numeric|/type/Numeric>, interprets it as radians,
-returns its L<tangens|https://en.wikipedia.org/wiki/Tangent>.
+returns its L<tangent|https://en.wikipedia.org/wiki/Tangent>.
 
 =head2 routine atan
 
@@ -301,7 +301,7 @@ Usage:
     NUMERIC.atan
 
 Coerces the invocant (or in sub form, the argument) to L<Numeric|/type/Numeric>, and returns its
-L<arc-tangens|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
+L<arc-tangent|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
 radians.
 
 =head2 routine atan2
@@ -318,7 +318,7 @@ Usage:
 
 Coerces the arguments (including the invocant in the method form) to L<Numeric|/type/Numeric>,
 and returns their two-argument
-L<arc-tangens|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
+L<arc-tangent|https://en.wikipedia.org/wiki/Inverse_trigonometric_functions> in
 radians.
 
 =head2 method sec
@@ -399,7 +399,7 @@ Usage:
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, interprets it as radians,
 returns its L<cotangent|https://en.wikipedia.org/wiki/Trigonometric_functions#Reciprocal_functions>,
-that is, the reciprocal of its tangens.
+that is, the reciprocal of its tangent.
 
 =head2 routine acotan
 
@@ -490,7 +490,7 @@ Usage:
     NUMERIC.tanh
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
-L<Tangens hyperbolicus|https://en.wikipedia.org/wiki/Hyperbolic_function>.
+L<Tangent hyperbolicus|https://en.wikipedia.org/wiki/Hyperbolic_function>.
 
 =head2 routine atanh
 
@@ -505,7 +505,7 @@ Usage:
     NUMERIC.atanh
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, and returns its
-L<Inverse tangens hyperbolicus|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
+L<Inverse tangent hyperbolicus|https://en.wikipedia.org/wiki/Inverse_hyperbolic_function>.
 
 =head2 routine sech
 
