--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -55,7 +55,7 @@ The most reliable information is to be found either under the perl6.org domains 
 L<https://www.perl6.org/documentation/|https://www.perl6.org/documentation/> with
 L<https://doc.perl6.org/|https://doc.perl6.org/> as the canonical technical reference.
 
-There is much good recent material on Youtube but be careful to check any dates
+There is much good recent material on YouTube but be careful to check any dates
 on webpages since much of the Perl 6 information on random websites found by
 Google is often outdated.
 
