--- a/Language/list.pod
+++ b/Language/list.pod
@@ -269,7 +269,7 @@ structure in the result:
 
 A L<C<Range>|/type/Range> is a container for a lower and a upper boundary.
 Generating a slice with a C<Range> will include any index between those bounds,
-including the bounds. For infinite upper bounderies we agree with
+including the bounds. For infinite upper boundaries we agree with
 mathematicians that C<Inf> equals C<Inf-1>.
 
     my @a = 1..5;
