Links to speculations

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -500,11 +500,12 @@ The "Zen" slice does the same thing:
         my @a = $arrayref[];
         my %h = $hashref{};
 
-See S32/Containers
+See L<S32/Containers|https://design.perl6.org/S32/Containers.html>
 
 =head1 Operators
 
-See S03-operators for full details on all operators.
+See L<S03/Operators|https://design.perl6.org/S03.html#Overview>
+for full details on all operators.
 
 Unchanged:
 
@@ -1125,7 +1126,8 @@ Taint warnings are not yet specified.
 
 =item C<-P> C<-u> C<-U> C<-W> C<-X>
 
-Removed. See S19.
+Removed. See L<S19#Removed Syntactic
+Features|https://design.perl6.org/S19.html#Removed_Syntactic_Features>.
 
 =item C<-w>
 
