add NYI to glossary

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -675,6 +675,10 @@ the basic VM primitives.  Compilers (such as L<#Rakudo> typically use
 NQP to compile L<action methods|#Actions> that convert a parse tree
 into its equivalent L<abstract syntax tree|#AST> representation.
 
+=head1 NYI
+
+Not Yet Implemented
+
 =head1 Operator
 
 =head1 Package
