define Enum in glossary

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -303,6 +303,9 @@ See also L<https://en.wikipedia.org/wiki/Damian_Conway>.
 
 =head1 Enum
 
+Enumerations provide constant key-value-pairs with an associated type.
+See L<Enum|/Language/typesystem#enum>.
+
 =head1 Exegesis
 
 A document originally written by L<#TheDamian>, in which he tried to explain
