glossary: add Container placeholder

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -285,6 +285,8 @@ L<multi-dispatch|#Multi-Dispatch> by using a different constraint:
     say abbreviate("Worthington");   # Worthin...
     say abbreviate("Mäsak");         # Mäsak
 
+=head1 Container
+
 =head1 Cool
 
 =head1 dalek
