glossary: fix Twigil link

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -760,7 +760,7 @@ L<#lvalue>.
 In Perl, the sigil is the first character of a variable name.  It must be
 either L<#$>, L<#@>, L<#%>, or L<#&> respectively for a L<scalar|#Scalar>,
 L<array|#Array>, L<hash|#Hash>, or L<code|#Code> variable.  See also
-L<#twigil> and L<#role>.  Also sigilled variables allow short conventions
+L<#Twigil> and L<#role>.  Also sigilled variables allow short conventions
 for L<variable interpolation#Variable Interpolation> in a double quoted
 string, or even L<postcircumfix|#Postcircumfix> L<expressions|#Expression>
 starting with such a variable.
